--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import "base/utilities";
 
 @import "components/button";
+@import "components/bg-video";
 @import "components/card";
 @import "components/story";
 @import "components/composition";
