--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -42,6 +42,9 @@ Implementing ORDER: Base + Typography > General Layout + Grid > Page Layout + Co
     } 
     @if $breakpoint == tab-land {
         @media (max-width: 75em) { @content };    //1200px
+    }
+    @if $breakpoint == desktop {
+        @media (max-width: 81.25em) { @content };    //1200px
     } 
     @if $breakpoint == big-desktop {
         @media (min-width: 112.5em) { @content };    //1800px
