--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -23,11 +23,33 @@
         opacity: 0;
         transform: translate(-50%, -50%) scale(.5);
         transition: all .5s .2s;
+
+        
+
     }
 
     &__left {
         width: 33.333333%;
         display: table-cell;
+
+        @include respond(desktop) {
+            padding: 4rem 0 0 3rem;
+            transform: rotate(-15deg) translateX(-1rem) translateY(-4rem);
+            position: absolute;
+      }
+
+
+        @include respond(tab-land) {
+            padding: 4rem 0 0 3rem;
+            transform: rotate(-15deg) translateX(-1rem) translateY(-4rem);
+            position: absolute;
+      }
+
+        @include respond(tab-port) {
+              padding: 4rem 0 0 3rem;
+              transform: rotate(-15deg) translateX(-1rem) translateY(2rem);
+              position: absolute;
+        }
     }
 
     &__right {
@@ -35,11 +57,38 @@
         display: table-cell;
         vertical-align: middle;
         padding: 3rem 5rem;
+
+        & .heading-secondary {
+            @include respond(tab-port) {
+                font-size: 2.5rem;
+              }
+          
+              @include respond(phone) {
+                font-size: 2rem;
+              }
+          
+        }
     }
 
     &__img {
         display: block;
         width: 100%;
+
+        @include respond(desktop) {
+            border: 6px solid $color-white;
+            box-shadow: 0 1rem 2rem rgba($color-black, .2);
+      }
+
+        @include respond(tab-land) {
+            border: 6px solid $color-white;
+            box-shadow: 0 1rem 2rem rgba($color-black, .2);
+      }
+
+        @include respond(tab-port) {
+            border: 6px solid $color-white;
+            box-shadow: 0 1rem 2rem rgba($color-black, .2);
+      }
+
     }
 
     &__text {
@@ -51,6 +100,12 @@
         column-rule: 1px solid $color-grey-light-2;
 
         hyphens: auto;
+
+        @include respond(tab-port) {
+            column-count: auto;
+            column-gap: 0;
+            column-rule: 0px solid $color-grey-light-2;
+      }
     }
 
     //OPEN STATES
@@ -62,6 +117,10 @@
     &:target &__content {
         opacity: 1;
         transform: translate(-50%, -50%) scale(1);
+
+        @include respond(phone) {
+            width: auto;
+          }
     }
 
     &__close {
