--- a/css/style.css
+++ b/css/style.css
@@ -395,6 +395,7 @@ body {
     -webkit-clip-path: circle(50% at 50% 50%);
     clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(12deg);
+    overflow: hidden;
     position: relative; }
     @media (max-width: 37.5em) {
       .story__shape {
