--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -28,7 +28,7 @@
         position: relative;
         border-radius: 50%;
 
-        @supports (clip-path: polygon(0, 0)) or (-webkit-clip-path: polygon(0, 0)) {
+        @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
             -webkit-clip-path: circle(50% at 50% 50%);
             clip-path: circle(50% at 50% 50%);
             -webkit-shape-outside: circle(50% at 50% 50%);
